feat: add new free proxy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: proxy_pool
     ports:
       - "5010:5010"
-      - "6666:6666"      
+      - "6666:6666"            
     links:
       - proxy_redis
     environment:
@@ -13,3 +13,5 @@ services:
   proxy_redis:
     image: "redis"
     container_name: proxy_redis
+    ports:
+      - "6379:6379"
